# telomere.ai

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  generate-health-descriptions.js  health-conditions-data.json  nginx.conf  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/web/: package.json  vite.config.js
apps/web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
apps/web/.svelte-kit/output/server/: index.js  manifest-full.js  remote-entry.js
apps/web/.svelte-kit/types/: route_meta_data.json
apps/web/src/: app.css  app.html
apps/web/src/lib/components/: AppSidebar.svelte  ChromosomeMap.svelte  DnaHelix.svelte  FileUpload.svelte  Footer.svelte  GenomeNamePrompt.svelte  GenomeSwitcher.svelte  LiveResults.svelte  Nav.svelte  ReportSection.svelte  RiskGauge.svelte  SnpCard.svelte  VariantList.svelte
apps/web/src/lib/data/: blog-articles.js  sample-genome.js  trait-descriptions.js
apps/web/src/lib/services/: annotation-service.js
apps/web/src/lib/stores/: annotations.js  genetic-data.js  navigation.js  platform.js  reports.js
apps/web/src/lib/utils/: condition-merge.js  export.js  traits.js
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
apps/web/static/: robots.txt  sitemap.xml
scripts/: add-snps.mjs  expand-snp-db.js  scrape-snpedia.js  test-build.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyzer.rs  lib.rs  main.rs  parser.rs  snp_database.rs
tests/: test-all.mjs
(+106 files in other folders)
