[package]
name = "telomere-ai"
version = "0.1.0"
description = "Telomere AI — Free DNA analysis desktop app"
authors = ["Vaionex"]
edition = "2021"

[lib]
name = "telomere_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
flate2 = "1.0"
